--- a/services/idp/public/index.html
+++ b/services/idp/public/index.html
@@ -1,6 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head data-kopano-build="%REACT_APP_KOPANO_BUILD%">
+    <style>
+    @font-face {
+    font-family: OpenTalk;
+    src: url('%PUBLIC_URL%/static/opentalk-500.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+
+    }
+    @font-face {
+    font-family: OpenTalk;
+    src: url('%PUBLIC_URL%/static/opentalk-750.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+    }
+    </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#1b223d">
